fixing layout spacing

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -1724,7 +1724,7 @@ circle {
 
 .radial #place-title {
     color: @grey;
-    margin-bottom: 10px;
+    height: 40px;
 }
 .radial #place-title:hover {
     color: black;
